7、db部分的Page对象增加addOrder方法
8、CollectionUtil针对基本类型数组isEmpty
9、JSONUtil增加pauseObj方法
10、增加Charset对象支持

2.15.10
1、增加DFA模块，用于关键词查找
2、Conver.toBool支持更多类型的字符串形式
3、JSON修复构造方法
4、Setting增加getStr方法，分组默认值
5、修复StrUtil.sub中to超出字符串长度出现空格的问题

2.15.11
1、DateUtil增加计算年龄的方法
2、增加ImageUtil类

2.15.12
1、ReUtil和StrUtil中增加count方法，用于统计字符串中指定字符串或字符的个数
2、修复isFile方法
3、归类Log的方言
4、修复DFA截断问题

2.15.13
1、增加DFA的匹配模式选择

2.15.4
1、修复HttpUtil.downloadFile中第二个参数为目录时文件找不到的问题
2、ZipUtil增加多文件压缩
3、修复StrUtil.sub中fromIndex计算错误导致的截取异常问题

2.15.15
1、修复sortPageAll和sortPageAll2方法中越界问题
2、修复布隆过滤添加返回false的问题
3、修复HttpUtil的toParam的encode问题
4、HttpRequest中body方法参数多余问题

2.15.16
1、修复Http post方法参数丢失问题

2.15.17
1、HttpRequest增加方法body(String body, String contentType) 和 body(JSON json)
2、日志部分加入LocationAwareLog，便于再次封装
3、修复StaticLog打印日志行号错误问题
4、修改SecureUtil中sha1为hmacSha1，区别sha1
5、修复Oracle中TIMESTAMP问题（返回类型为oracle.sql.TIMESTAMP）
6、ThreadUtil修改方法getThreadLocal为可选ThreadLocal或InheritableThreadLocal
7、全面优化StrUtil.format方法，增加转义支持
8、增加BeanUtil.isBean方法用于判断是否为JavaBean
9、修复StaticLog错误

2.15.18
1、修复日志无堆栈打印问题
2、修复DateUtil中返回空指针问题
3、增加ClassUtil.isNormalClass和isAbstract方法
4、修复BeanUtil.isBean
5、修复ClassUtil，消除歧义
6、抽象JSON中的getEnum方法

2.15.19
1、Conver类变为Convert类
2、增加Holder接口
3、抽象BeanUtil.copyProperties，支持更多选项
4、DruidDS增加系统关闭的钩子
5、增加CollectionUtil中isEmpty和isNotEmpty for Iterator and Iterable
6、extractMultiAndDelPre使用Holder类代替数组，减少歧义
7、增加FileTypeUtil用于判断文件类型
8、FileUtil迁移至com.xiaoleilu.io中
9、增加HexUtil，同时在Convert中增加toHex等方法，用于转换为16进制

2.15.20
1、修复Setting中的getMap(String group)方法，去除分组头部

=====================================================
2.16.0
1、全面更新db模块中的ds部分，使用工厂类自动选定连接池实现
2、扩充CollectionUtil，增加交集（intersection）、并集（union）、差集（disjunction）方法
3、ds部分增加Tomcat-jdbc-pool的实现
4、ds增加JndiDSFactory，支持JNDI数据源
5、修复各个包中error日志使用问题导致的无法打印堆栈
6、Setting中删除大量重复的方法，统一getXXX
7、扩充HexUtil，增加isHexNumber方法
8、CollectionUtil增加forEach方法，用于支持Map等类型遍历
9、将DateUtil包变更为date，同时拆分格式化模式为单独的类，优化性能。DateUtil中增加方法
10、修复StrUtil.join时传入数组或集合类无法转为字符串问题